--- a/service_evaluation/app/templates/index.html
+++ b/service_evaluation/app/templates/index.html
@@ -8,6 +8,6 @@
   </style>
   <div class="content">
     <p> ยินดีต้อนรับสู่ระบบประเมินเว็ปแอพพลิเคชั่นคณะวิทยาศาสตร์ มหาวิทยาลัยธรรมศาสตร์ </p>
-    <a href="{% url 'evaluation' %}"> กดที่นี่เพื่อเริ่มระเมิน </a>
+    <a href="{% url 'evaluation' %}"> กดที่นี่เพื่อเริ่มประเมิน </a>
   </div>
 {% endblock %}
