--- a/service_evaluation/app/templates/base.html
+++ b/service_evaluation/app/templates/base.html
@@ -11,11 +11,7 @@
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700&amp;subset=thai">
-  <link href='https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_editor.min.css' rel='stylesheet'
-    type='text/css' />
-  <link href='https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_style.min.css' rel='stylesheet'
-    type='text/css' />
-  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/js/froala_editor.min.js'></script>
+  <script src="{% static 'js/access.js' %}"></script> 
 
 </head>
 
@@ -111,16 +107,6 @@
   </div>
 
   {% block script %}
-  <script type="text/javascript">
-    var app = new Vue({
-      el: '#app',
-      delimiters: ['[[', ']]'],
-      log: false,
-      data: function () {
-        return {}
-      }
-    })
-  </script>
   {% endblock %}
 </body>
 
